[package]
# -- | metadata | --
name            = "byakugan"
version         = "0.1.0"
description     = "Dummy description"
authors         = ["Kike Fontan <@cosasdepuma>"]
keywords        = ["cyberintelligence", "osint"] # TODO: Better keywords
categories      = ["development-tools"] # TODO: Better categories

# -- | repository | --
repository      = "https://github.com/cosasdepuma/byakugan"
readme          = "README.md"
license         = "GPL-3.0-or-later"

# -- | compiler | --
edition         = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap            = { version = "4.4.12", features = ["derive", "env", "string"] }    # Command line argument parser
crossterm       = { version = "0.27.0" }                                            # Terminal backend (multiplatform)
dirs            = { version = "5.0.1" }                                             # OS directories
dotenvy         = { version = "0.15.7" }                                            # .env parser
log             = { version = "0.4.20" }                                            # Logging system
log4rs          = { version = "1.2.0" }                                             # Logging helpers
ratatui         = { version = "0.25.0", features = ["crossterm"] }                  # TUI library
tokio           = { version = "1.35.1", features = ["full"] }                       # Async runtime
url             = { version = "2.5.0" }                                             # URL parser
uuid            = { version = "1.6.1", features = ["v4"] }                          # UUID generator

[dependencies.sea-orm]                                                              # Database ORM
version         = "0.12"
features        = ["macros", "runtime-tokio-rustls", "sqlx-mysql", "sqlx-postgres", "sqlx-sqlite"]


